--- a/test/check.ipynb
+++ b/test/check.ipynb
@@ -2,55 +2,51 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import epoch_toolkit"
+    "import epoch_toolkit as et\n",
+    "import sdf_helper as sdfh"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data = sdfh.getdata(\"../test_data/test_sdf_file.sdf\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "grid = et.grid.grid_factory(data)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Reading file ../test_data/test_sdf_file.sdf\n",
-      "t() = time\n",
-      "x(201, 201, 201) = grid\n",
-      "y(201, 201, 201) = grid\n",
-      "z(201, 201, 201) = grid\n",
-      "xc(200, 200, 200) = grid_mid\n",
-      "yc(200, 200, 200) = grid_mid\n",
-      "zc(200, 200, 200) = grid_mid\n"
+     "ename": "AttributeError",
+     "evalue": "'Grid3D' object has no attribute 'model_dump'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[13], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[43mgrid\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mmodel_dump\u001b[49m(mode\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mjson\u001b[39m\u001b[38;5;124m'\u001b[39m)\n",
+      "\u001b[0;31mAttributeError\u001b[0m: 'Grid3D' object has no attribute 'model_dump'"
      ]
     }
    ],
    "source": [
-    "data = epoch_toolkit.sdfh.getdata(\"../test_data/test_sdf_file.sdf\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0.0007519038253622308"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "data.Absorption_Total_Laser_Energy_Injected__J_.data"
+    "grid.model_dump()"
    ]
   }
  ],
