--- a/test/check.ipynb
+++ b/test/check.ipynb
@@ -2,51 +2,109 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import epoch_toolkit as et\n",
-    "import sdf_helper as sdfh"
+    "import epoch_toolkit as et"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "data = sdfh.getdata(\"../test_data/test_sdf_file.sdf\")"
+    "handler = et.core.SingleFile(unit=\"nano\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "grid = et.grid.grid_factory(data)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
-     "ename": "AttributeError",
-     "evalue": "'Grid3D' object has no attribute 'model_dump'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[13], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[43mgrid\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mmodel_dump\u001b[49m(mode\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mjson\u001b[39m\u001b[38;5;124m'\u001b[39m)\n",
-      "\u001b[0;31mAttributeError\u001b[0m: 'Grid3D' object has no attribute 'model_dump'"
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2024-05-06 19:40:09,769 | INFO :: handler :: Reading file: ../test_data/test_sdf_file.sdf\n",
+      "2024-05-06 19:40:09,770 | INFO :: handler :: Creating grid\n"
      ]
     }
    ],
    "source": [
-    "grid.model_dump()"
+    "handler.read(\"../test_data/test_sdf_file.sdf\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(200, 200, 200)"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "handler.density(\"electron\").shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "crop = et.core.transform.crop.SimpleCrop.from_abstract_grid(\n",
+    "    min=-100, max=100, axis=\"x\", grid=grid, unit=et.core.Unit.nano\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(21, 200, 200)"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "crop.apply(data.Derived_Number_Density_electron.data).shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(200, 200, 200)"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data.Derived_Number_Density_electron.data.shape"
    ]
   }
  ],
