--- a/test/check.ipynb
+++ b/test/check.ipynb
@@ -11,56 +11,93 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'2.7.1'"
-      ]
-     },
-     "execution_count": 1,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "import pydantic\n",
-    "\n",
-    "pydantic.__version__"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 2,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "handler = et.core.SingleFile(unit=\"nano\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2024-05-06 19:40:09,769 | INFO :: handler :: Reading file: ../test_data/test_sdf_file.sdf\n",
-      "2024-05-06 19:40:09,770 | INFO :: handler :: Creating grid\n"
+      "2024-05-07 02:58:24,246 | INFO :: handler :: Reading file: ../test_data/test_sdf_file.sdf\n",
+      "2024-05-07 02:58:24,247 | INFO :: handler :: Capturing grid...\n",
+      "2024-05-07 02:58:24,248 | INFO :: handler :: Grid: 3D (200, 200, 200)\n"
      ]
     }
    ],
    "source": [
+    "handler = et.handler.FileHandler(unit=\"nano\")\n",
     "handler.read(\"../test_data/test_sdf_file.sdf\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2024-05-07 02:56:37,148 | INFO :: handler :: Reading file: ../test_data/test_sdf_file.sdf\n",
+      "2024-05-07 02:56:37,149 | INFO :: handler :: Creating grid\n",
+      "2024-05-07 02:56:37,150 | INFO :: handler :: Grid created: 3D\n"
+     ]
+    }
+   ],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "xenon\n",
+      "electron\n"
+     ]
+    }
+   ],
+   "source": [
+    "from itertools import product\n",
+    "\n",
+    "# TODO: create analyzer\n",
+    "\n",
+    "keys_ = list(handler.data.__dict__.keys())\n",
+    "\n",
+    "vals = [\"Derived_Number_Density\", \"Grid_Particles\"]\n",
+    "\n",
+    "for k, v in product(keys_, vals):\n",
+    "    if k.startswith(v):\n",
+    "        specie = k.split(v)[1][1:]\n",
+    "\n",
+    "        if specie:\n",
+    "            print(specie)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "dict_keys(['Header', 'Run_info', 'Wall_time', 'Total_Particle_Energy_xenon__J_', 'Total_Particle_Energy_electron__J_', 'Total_Particle_Energy_in_Simulation__J_', 'Total_Field_Energy_in_Simulation__J_', 'Derived_Number_Density', 'Derived_Number_Density_xenon', 'Derived_Number_Density_electron', 'Grid_Grid', 'Grid_Grid_mid', 'Absorption_Total_Laser_Energy_Injected__J_', 'Absorption_Fraction_of_Laser_Energy_Absorbed____', 'Grid_CPUs_Original_rank', 'Grid_CPUs_Original_rank_mid', 'CPUs_Original_rank', 'CPUs_Current_rank', 'Surface_Values_boundary_Derived_Number_Density', 'Surface_Values_boundary_Derived_Number_Density_xenon', 'Surface_Values_boundary_Derived_Number_Density_electron', 'Surface_Values_boundary_CPUs_Original_rank', 'Surface_Values_boundary_CPUs_Current_rank', 'Surface_Values_boundary_x_min_Derived_Number_Density', 'Surface_Values_boundary_x_min_Derived_Number_Density_xenon', 'Surface_Values_boundary_x_min_Derived_Number_Density_electron', 'Surface_Values_boundary_x_min_CPUs_Original_rank', 'Surface_Values_boundary_x_min_CPUs_Current_rank', 'Surface_Values_boundary_x_max_Derived_Number_Density', 'Surface_Values_boundary_x_max_Derived_Number_Density_xenon', 'Surface_Values_boundary_x_max_Derived_Number_Density_electron', 'Surface_Values_boundary_x_max_CPUs_Original_rank', 'Surface_Values_boundary_x_max_CPUs_Current_rank', 'Surface_Values_boundary_y_min_Derived_Number_Density', 'Surface_Values_boundary_y_min_Derived_Number_Density_xenon', 'Surface_Values_boundary_y_min_Derived_Number_Density_electron', 'Surface_Values_boundary_y_min_CPUs_Original_rank', 'Surface_Values_boundary_y_min_CPUs_Current_rank', 'Surface_Values_boundary_y_max_Derived_Number_Density', 'Surface_Values_boundary_y_max_Derived_Number_Density_xenon', 'Surface_Values_boundary_y_max_Derived_Number_Density_electron', 'Surface_Values_boundary_y_max_CPUs_Original_rank', 'Surface_Values_boundary_y_max_CPUs_Current_rank', 'Surface_Values_boundary_z_min_Derived_Number_Density', 'Surface_Values_boundary_z_min_Derived_Number_Density_xenon', 'Surface_Values_boundary_z_min_Derived_Number_Density_electron', 'Surface_Values_boundary_z_min_CPUs_Original_rank', 'Surface_Values_boundary_z_min_CPUs_Current_rank', 'Surface_Values_boundary_z_max_Derived_Number_Density', 'Surface_Values_boundary_z_max_Derived_Number_Density_xenon', 'Surface_Values_boundary_z_max_Derived_Number_Density_electron', 'Surface_Values_boundary_z_max_CPUs_Original_rank', 'Surface_Values_boundary_z_max_CPUs_Current_rank'])"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -69,7 +106,7 @@
        "(200, 200, 200)"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
