--- a/test/check.ipynb
+++ b/test/check.ipynb
@@ -18,15 +18,185 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2024-05-07 02:58:24,246 | INFO :: handler :: Reading file: ../test_data/test_sdf_file.sdf\n",
-      "2024-05-07 02:58:24,247 | INFO :: handler :: Capturing grid...\n",
-      "2024-05-07 02:58:24,248 | INFO :: handler :: Grid: 3D (200, 200, 200)\n"
+      "2024-05-09 09:40:59,008 | INFO :: handler :: Reading file: ../test_data/0005.sdf\n",
+      "2024-05-09 09:40:59,020 | INFO :: handler :: Capturing grid...\n",
+      "2024-05-09 09:40:59,021 | INFO :: handler :: Grid: 3D (250, 250, 250)\n"
      ]
     }
    ],
    "source": [
     "handler = et.handler.FileHandler(unit=\"nano\")\n",
-    "handler.read(\"../test_data/test_sdf_file.sdf\")"
+    "handler.read(\"../test_data/0005.sdf\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['Absorption_Fraction_of_Laser_Energy_Absorbed____',\n",
+       " 'Absorption_Total_Laser_Energy_Injected__J_',\n",
+       " 'CPU_split_electron',\n",
+       " 'CPU_split_xenon',\n",
+       " 'CPUs_Current_rank',\n",
+       " 'CPUs_Original_rank',\n",
+       " 'Derived_Mass_Density',\n",
+       " 'Derived_Mass_Density_electron',\n",
+       " 'Derived_Mass_Density_xenon',\n",
+       " 'Derived_Number_Density',\n",
+       " 'Derived_Number_Density_electron',\n",
+       " 'Derived_Number_Density_xenon',\n",
+       " 'Derived_Temperature',\n",
+       " 'Derived_Temperature_electron',\n",
+       " 'Derived_Temperature_xenon',\n",
+       " 'Grid_CPU_split_electron',\n",
+       " 'Grid_CPU_split_electron_mid',\n",
+       " 'Grid_CPU_split_xenon',\n",
+       " 'Grid_CPU_split_xenon_mid',\n",
+       " 'Grid_CPUs_Original_rank',\n",
+       " 'Grid_CPUs_Original_rank_mid',\n",
+       " 'Grid_Grid',\n",
+       " 'Grid_Grid_mid',\n",
+       " 'Grid_Particles_electron',\n",
+       " 'Grid_Particles_xenon',\n",
+       " 'Header',\n",
+       " 'Particles_Px_electron',\n",
+       " 'Particles_Px_xenon',\n",
+       " 'Particles_Py_electron',\n",
+       " 'Particles_Py_xenon',\n",
+       " 'Particles_Pz_electron',\n",
+       " 'Particles_Pz_xenon',\n",
+       " 'Run_info',\n",
+       " 'Surface_Values_boundary_CPU_split_electron',\n",
+       " 'Surface_Values_boundary_CPU_split_xenon',\n",
+       " 'Surface_Values_boundary_CPUs_Current_rank',\n",
+       " 'Surface_Values_boundary_CPUs_Original_rank',\n",
+       " 'Surface_Values_boundary_Derived_Mass_Density',\n",
+       " 'Surface_Values_boundary_Derived_Mass_Density_electron',\n",
+       " 'Surface_Values_boundary_Derived_Mass_Density_xenon',\n",
+       " 'Surface_Values_boundary_Derived_Number_Density',\n",
+       " 'Surface_Values_boundary_Derived_Number_Density_electron',\n",
+       " 'Surface_Values_boundary_Derived_Number_Density_xenon',\n",
+       " 'Surface_Values_boundary_Derived_Temperature',\n",
+       " 'Surface_Values_boundary_Derived_Temperature_electron',\n",
+       " 'Surface_Values_boundary_Derived_Temperature_xenon',\n",
+       " 'Surface_Values_boundary_x_max_CPU_split_electron',\n",
+       " 'Surface_Values_boundary_x_max_CPU_split_xenon',\n",
+       " 'Surface_Values_boundary_x_max_CPUs_Current_rank',\n",
+       " 'Surface_Values_boundary_x_max_CPUs_Original_rank',\n",
+       " 'Surface_Values_boundary_x_max_Derived_Mass_Density',\n",
+       " 'Surface_Values_boundary_x_max_Derived_Mass_Density_electron',\n",
+       " 'Surface_Values_boundary_x_max_Derived_Mass_Density_xenon',\n",
+       " 'Surface_Values_boundary_x_max_Derived_Number_Density',\n",
+       " 'Surface_Values_boundary_x_max_Derived_Number_Density_electron',\n",
+       " 'Surface_Values_boundary_x_max_Derived_Number_Density_xenon',\n",
+       " 'Surface_Values_boundary_x_max_Derived_Temperature',\n",
+       " 'Surface_Values_boundary_x_max_Derived_Temperature_electron',\n",
+       " 'Surface_Values_boundary_x_max_Derived_Temperature_xenon',\n",
+       " 'Surface_Values_boundary_x_min_CPU_split_electron',\n",
+       " 'Surface_Values_boundary_x_min_CPU_split_xenon',\n",
+       " 'Surface_Values_boundary_x_min_CPUs_Current_rank',\n",
+       " 'Surface_Values_boundary_x_min_CPUs_Original_rank',\n",
+       " 'Surface_Values_boundary_x_min_Derived_Mass_Density',\n",
+       " 'Surface_Values_boundary_x_min_Derived_Mass_Density_electron',\n",
+       " 'Surface_Values_boundary_x_min_Derived_Mass_Density_xenon',\n",
+       " 'Surface_Values_boundary_x_min_Derived_Number_Density',\n",
+       " 'Surface_Values_boundary_x_min_Derived_Number_Density_electron',\n",
+       " 'Surface_Values_boundary_x_min_Derived_Number_Density_xenon',\n",
+       " 'Surface_Values_boundary_x_min_Derived_Temperature',\n",
+       " 'Surface_Values_boundary_x_min_Derived_Temperature_electron',\n",
+       " 'Surface_Values_boundary_x_min_Derived_Temperature_xenon',\n",
+       " 'Surface_Values_boundary_y_max_CPU_split_electron',\n",
+       " 'Surface_Values_boundary_y_max_CPU_split_xenon',\n",
+       " 'Surface_Values_boundary_y_max_CPUs_Current_rank',\n",
+       " 'Surface_Values_boundary_y_max_CPUs_Original_rank',\n",
+       " 'Surface_Values_boundary_y_max_Derived_Mass_Density',\n",
+       " 'Surface_Values_boundary_y_max_Derived_Mass_Density_electron',\n",
+       " 'Surface_Values_boundary_y_max_Derived_Mass_Density_xenon',\n",
+       " 'Surface_Values_boundary_y_max_Derived_Number_Density',\n",
+       " 'Surface_Values_boundary_y_max_Derived_Number_Density_electron',\n",
+       " 'Surface_Values_boundary_y_max_Derived_Number_Density_xenon',\n",
+       " 'Surface_Values_boundary_y_max_Derived_Temperature',\n",
+       " 'Surface_Values_boundary_y_max_Derived_Temperature_electron',\n",
+       " 'Surface_Values_boundary_y_max_Derived_Temperature_xenon',\n",
+       " 'Surface_Values_boundary_y_min_CPU_split_electron',\n",
+       " 'Surface_Values_boundary_y_min_CPU_split_xenon',\n",
+       " 'Surface_Values_boundary_y_min_CPUs_Current_rank',\n",
+       " 'Surface_Values_boundary_y_min_CPUs_Original_rank',\n",
+       " 'Surface_Values_boundary_y_min_Derived_Mass_Density',\n",
+       " 'Surface_Values_boundary_y_min_Derived_Mass_Density_electron',\n",
+       " 'Surface_Values_boundary_y_min_Derived_Mass_Density_xenon',\n",
+       " 'Surface_Values_boundary_y_min_Derived_Number_Density',\n",
+       " 'Surface_Values_boundary_y_min_Derived_Number_Density_electron',\n",
+       " 'Surface_Values_boundary_y_min_Derived_Number_Density_xenon',\n",
+       " 'Surface_Values_boundary_y_min_Derived_Temperature',\n",
+       " 'Surface_Values_boundary_y_min_Derived_Temperature_electron',\n",
+       " 'Surface_Values_boundary_y_min_Derived_Temperature_xenon',\n",
+       " 'Surface_Values_boundary_z_max_CPU_split_electron',\n",
+       " 'Surface_Values_boundary_z_max_CPU_split_xenon',\n",
+       " 'Surface_Values_boundary_z_max_CPUs_Current_rank',\n",
+       " 'Surface_Values_boundary_z_max_CPUs_Original_rank',\n",
+       " 'Surface_Values_boundary_z_max_Derived_Mass_Density',\n",
+       " 'Surface_Values_boundary_z_max_Derived_Mass_Density_electron',\n",
+       " 'Surface_Values_boundary_z_max_Derived_Mass_Density_xenon',\n",
+       " 'Surface_Values_boundary_z_max_Derived_Number_Density',\n",
+       " 'Surface_Values_boundary_z_max_Derived_Number_Density_electron',\n",
+       " 'Surface_Values_boundary_z_max_Derived_Number_Density_xenon',\n",
+       " 'Surface_Values_boundary_z_max_Derived_Temperature',\n",
+       " 'Surface_Values_boundary_z_max_Derived_Temperature_electron',\n",
+       " 'Surface_Values_boundary_z_max_Derived_Temperature_xenon',\n",
+       " 'Surface_Values_boundary_z_min_CPU_split_electron',\n",
+       " 'Surface_Values_boundary_z_min_CPU_split_xenon',\n",
+       " 'Surface_Values_boundary_z_min_CPUs_Current_rank',\n",
+       " 'Surface_Values_boundary_z_min_CPUs_Original_rank',\n",
+       " 'Surface_Values_boundary_z_min_Derived_Mass_Density',\n",
+       " 'Surface_Values_boundary_z_min_Derived_Mass_Density_electron',\n",
+       " 'Surface_Values_boundary_z_min_Derived_Mass_Density_xenon',\n",
+       " 'Surface_Values_boundary_z_min_Derived_Number_Density',\n",
+       " 'Surface_Values_boundary_z_min_Derived_Number_Density_electron',\n",
+       " 'Surface_Values_boundary_z_min_Derived_Number_Density_xenon',\n",
+       " 'Surface_Values_boundary_z_min_Derived_Temperature',\n",
+       " 'Surface_Values_boundary_z_min_Derived_Temperature_electron',\n",
+       " 'Surface_Values_boundary_z_min_Derived_Temperature_xenon',\n",
+       " 'Total_Field_Energy_in_Simulation__J_',\n",
+       " 'Total_Particle_Energy_in_Simulation__J_',\n",
+       " 'Wall_time',\n",
+       " '__class__',\n",
+       " '__delattr__',\n",
+       " '__dict__',\n",
+       " '__dir__',\n",
+       " '__doc__',\n",
+       " '__eq__',\n",
+       " '__format__',\n",
+       " '__ge__',\n",
+       " '__getattribute__',\n",
+       " '__gt__',\n",
+       " '__hash__',\n",
+       " '__init__',\n",
+       " '__init_subclass__',\n",
+       " '__le__',\n",
+       " '__lt__',\n",
+       " '__ne__',\n",
+       " '__new__',\n",
+       " '__reduce__',\n",
+       " '__reduce_ex__',\n",
+       " '__repr__',\n",
+       " '__setattr__',\n",
+       " '__sizeof__',\n",
+       " '__str__',\n",
+       " '__subclasshook__']"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dir(handler.data)"
    ]
   },
   {
@@ -35,26 +205,11 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "2024-05-07 02:56:37,148 | INFO :: handler :: Reading file: ../test_data/test_sdf_file.sdf\n",
-      "2024-05-07 02:56:37,149 | INFO :: handler :: Creating grid\n",
-      "2024-05-07 02:56:37,150 | INFO :: handler :: Grid created: 3D\n"
-     ]
-    }
-   ],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 18,
-   "metadata": {},
-   "outputs": [
-    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "xenon\n",
+      "electron\n",
       "xenon\n",
       "electron\n"
      ]
@@ -79,21 +234,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "dict_keys(['Header', 'Run_info', 'Wall_time', 'Total_Particle_Energy_xenon__J_', 'Total_Particle_Energy_electron__J_', 'Total_Particle_Energy_in_Simulation__J_', 'Total_Field_Energy_in_Simulation__J_', 'Derived_Number_Density', 'Derived_Number_Density_xenon', 'Derived_Number_Density_electron', 'Grid_Grid', 'Grid_Grid_mid', 'Absorption_Total_Laser_Energy_Injected__J_', 'Absorption_Fraction_of_Laser_Energy_Absorbed____', 'Grid_CPUs_Original_rank', 'Grid_CPUs_Original_rank_mid', 'CPUs_Original_rank', 'CPUs_Current_rank', 'Surface_Values_boundary_Derived_Number_Density', 'Surface_Values_boundary_Derived_Number_Density_xenon', 'Surface_Values_boundary_Derived_Number_Density_electron', 'Surface_Values_boundary_CPUs_Original_rank', 'Surface_Values_boundary_CPUs_Current_rank', 'Surface_Values_boundary_x_min_Derived_Number_Density', 'Surface_Values_boundary_x_min_Derived_Number_Density_xenon', 'Surface_Values_boundary_x_min_Derived_Number_Density_electron', 'Surface_Values_boundary_x_min_CPUs_Original_rank', 'Surface_Values_boundary_x_min_CPUs_Current_rank', 'Surface_Values_boundary_x_max_Derived_Number_Density', 'Surface_Values_boundary_x_max_Derived_Number_Density_xenon', 'Surface_Values_boundary_x_max_Derived_Number_Density_electron', 'Surface_Values_boundary_x_max_CPUs_Original_rank', 'Surface_Values_boundary_x_max_CPUs_Current_rank', 'Surface_Values_boundary_y_min_Derived_Number_Density', 'Surface_Values_boundary_y_min_Derived_Number_Density_xenon', 'Surface_Values_boundary_y_min_Derived_Number_Density_electron', 'Surface_Values_boundary_y_min_CPUs_Original_rank', 'Surface_Values_boundary_y_min_CPUs_Current_rank', 'Surface_Values_boundary_y_max_Derived_Number_Density', 'Surface_Values_boundary_y_max_Derived_Number_Density_xenon', 'Surface_Values_boundary_y_max_Derived_Number_Density_electron', 'Surface_Values_boundary_y_max_CPUs_Original_rank', 'Surface_Values_boundary_y_max_CPUs_Current_rank', 'Surface_Values_boundary_z_min_Derived_Number_Density', 'Surface_Values_boundary_z_min_Derived_Number_Density_xenon', 'Surface_Values_boundary_z_min_Derived_Number_Density_electron', 'Surface_Values_boundary_z_min_CPUs_Original_rank', 'Surface_Values_boundary_z_min_CPUs_Current_rank', 'Surface_Values_boundary_z_max_Derived_Number_Density', 'Surface_Values_boundary_z_max_Derived_Number_Density_xenon', 'Surface_Values_boundary_z_max_Derived_Number_Density_electron', 'Surface_Values_boundary_z_max_CPUs_Original_rank', 'Surface_Values_boundary_z_max_CPUs_Current_rank'])"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": []
+   "outputs": [],
+   "source": [
+    "py = handler.data.Particles_Py_electron.data\n",
+    "pz = handler.data.Particles_Pz_electron.data\n",
+    "_, y, z = handler.data.Grid_Particles_electron.data"
+   ]
   },
   {
    "cell_type": "code",
@@ -103,7 +251,7 @@
     {
      "data": {
       "text/plain": [
-       "(200, 200, 200)"
+       "True"
       ]
      },
      "execution_count": 8,
@@ -112,12 +260,22 @@
     }
    ],
    "source": [
+    "aaa = [y, py, z, pz]\n",
+    "all(sum([aaa[i] * aaa[i + 1] for i in range(0, len(aaa), 2)]) == y * py + z * pz)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "handler.density(\"electron\").shape"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -128,40 +286,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(21, 200, 200)"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "crop.apply(data.Derived_Number_Density_electron.data).shape"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(200, 200, 200)"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "data.Derived_Number_Density_electron.data.shape"
    ]
